--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "esbuild": "^0.13.15",
+    "globby": "^12.0.2",
+    "mdx-bundler": "^8.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
