--- a/package.json
+++ b/package.json
@@ -1,38 +1,6 @@
 {
   "name": "with-heart.xyz",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "dependencies": {
-    "@radix-ui/colors": "^0.1.8",
-    "@stitches/react": "^1.2.6",
-    "esbuild": "^0.13.15",
-    "globby": "^12.0.2",
-    "mdx-bundler": "^8.0.0",
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/builder-webpack5": "^6.4.9",
-    "@storybook/manager-webpack5": "^6.4.9",
-    "@storybook/react": "^6.4.9",
-    "@types/node": "16.11.9",
-    "@types/react": "17.0.35",
-    "babel-loader": "^8.2.3",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
-    "eslint-plugin-storybook": "^0.5.5",
-    "typescript": "4.5.2"
-  }
+  "author": "with-heart <with.heart+git@pm.me>",
+  "license": "MIT",
+  "scripts": {}
 }
