set root package to private

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "with-heart.xyz",
   "author": "with-heart <with.heart+git@pm.me>",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "pnpm -r dev",
     "postinstall": "preconstruct dev"
