--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 dist/
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
 # testing
 /coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
 
 # misc
 .DS_Store
