organize imports on save in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
   "eslint.workingDirectories": [{"pattern": "packages/*"}, {"pattern": "site"}],
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
