add babel for preconstruct

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "pnpm -r dev",
-    "postinstall": "preconstruct dev"
+    "dev": "pnpm -r --stream dev",
+    "postinstall": "preconstruct dev",
+    "build": "preconstruct build"
   },
   "workspaces": [
     "packages/*"
@@ -16,6 +17,9 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@preconstruct/cli": "^2.2.2"
   }
 }
