--- a/site/package.json
+++ b/site/package.json
@@ -14,13 +14,24 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^2.1.5",
+    "@mdx-js/mdx": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
+    "@next/mdx": "^12.3.1",
+    "@radix-ui/colors": "^0.1.8",
+    "@types/mdx": "^2.0.2",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "modern-normalize": "^1.1.0",
+    "rehype-raw": "^6.1.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-mdx-frontmatter": "^2.0.3",
+    "remark-shiki-twoslash": "^3.1.0",
     "sass": "^1.55.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "webpack": "^5"
   }
 }
