add heading anchors and autolinks

--- a/site/package.json
+++ b/site/package.json
@@ -26,7 +26,9 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "modern-normalize": "^1.1.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-raw": "^6.1.1",
+    "rehype-slug": "^5.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^2.0.3",
     "remark-shiki-twoslash": "^3.1.0",
