--- a/site/package.json
+++ b/site/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "modern-normalize": "^1.1.0",
+    "recma-nextjs-static-props": "^1.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.0.1",
