--- a/site/package.json
+++ b/site/package.json
@@ -33,6 +33,7 @@
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^2.0.3",
     "remark-shiki-twoslash": "^3.1.0",
+    "remark-toc": "^8.0.1",
     "sass": "^1.55.0",
     "typescript": "4.8.4",
     "webpack": "^5"
