--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@vercel/og": "^0.0.19",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "modern-normalize": "^1.1.0",
