--- a/site/package.json
+++ b/site/package.json
@@ -29,12 +29,14 @@
     "modern-normalize": "^1.1.0",
     "recma-nextjs-static-props": "^1.0.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-img-size": "^1.0.1",
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^2.0.3",
     "remark-shiki-twoslash": "^3.1.0",
     "remark-toc": "^8.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "sass": "^1.55.0",
     "typescript": "4.8.4",
     "webpack": "^5"
