--- a/site/package.json
+++ b/site/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xstate": "^4.33.6"
   },
   "devDependencies": {
     "@mdx-js/loader": "^2.1.5",
